--- a/index.html
+++ b/index.html
@@ -677,7 +677,7 @@
         <div class="mt-20">
             <a href="https://www.fiverr.com/yourusername" target="_blank" 
                class=" text-dark px-8 py-4 border-b-4 text-xl font-bold uppercase hover:text-gray-600 transition-colors font-[Arial] flex items-center">
-                <i class="fab fa-fiverr mr-3"></i>Contrátame aquí
+                <i class="fab fa-fiverr mr-3"></i>Contrátame aquí en Fiverr
             </a>
         </div>
     </section>
