refactor(index.html): update contact details and styling
Update email, phone number, and social media links in the contact section. Adjust styling for the Fiverr button and remove the footer section for a cleaner layout.

--- a/index.html
+++ b/index.html
@@ -1216,7 +1216,7 @@
 -->
 
             <!-- Contact Section -->
-            <section id="contact" class="py-12 md:py-20 mx-auto max-w-[95%] md:max-w-[90%] my-6 md:my-10">
+            <section id="contact" class="py-12 md:py-20 mx-auto max-w-[95%] md:max-w-[90%] mt-6 md:mt-10">
                 <div class="max-w-6xl mx-auto px-4 md:px-8">
                     <h2 class="text-3xl md:text-4xl font-bold mb-8 md:mb-12">Contacto</h2>
 
@@ -1236,7 +1236,7 @@
                                     <div>
                                         <p class="text-xs md:text-sm text-gray-500 mb-0.5 md:mb-1">Email</p>
                                         <a href="mailto:jhonychaves@gmail.com"
-                                            class="text-base md:text-lg font-medium hover:text-black transition-colors break-all">jhonychaves@gmail.com</a>
+                                            class="text-base md:text-lg font-medium hover:text-black transition-colors break-all">developerjhony8@gmail.com</a>
                                     </div>
                                 </div>
 
@@ -1259,8 +1259,7 @@
                                     <div>
                                         <p class="text-xs md:text-sm text-gray-500 mb-0.5 md:mb-1">Teléfono</p>
                                         <a href="tel:+34666666666"
-                                            class="text-base md:text-lg font-medium hover:text-black transition-colors">+34
-                                            666 666 666</a>
+                                            class="text-base md:text-lg font-medium hover:text-black transition-colors">+34 640 25 18 86</a>
                                     </div>
                                 </div>
                             </div>
@@ -1273,15 +1272,15 @@
                                         class="w-10 h-10 md:w-12 md:h-12 bg-gray-100 hover:bg-black hover:text-white text-gray-600 rounded-full flex items-center justify-center transition-all duration-300">
                                         <i class="fab fa-github text-lg md:text-xl"></i>
                                     </a>
-                                    <a href="https://linkedin.com/in/jhonathan-chaves-manzano"
+                                    <a href="https://www.linkedin.com/in/jhonathan-chaves-manzano-825b32215"
                                         class="w-10 h-10 md:w-12 md:h-12 bg-gray-100 hover:bg-black hover:text-white text-gray-600 rounded-full flex items-center justify-center transition-all duration-300">
                                         <i class="fab fa-linkedin-in text-lg md:text-xl"></i>
                                     </a>
-                                    <a href="https://twitter.com/jhony2k2"
+                                    <a href="https://twitter.com/Jh0ny350"
                                         class="w-10 h-10 md:w-12 md:h-12 bg-gray-100 hover:bg-black hover:text-white text-gray-600 rounded-full flex items-center justify-center transition-all duration-300">
                                         <i class="fab fa-twitter text-lg md:text-xl"></i>
                                     </a>
-                                    <a href="https://instagram.com/jhony2k2"
+                                    <a href="https://instagram.com/jh0ny2k2"
                                         class="w-10 h-10 md:w-12 md:h-12 bg-gray-100 hover:bg-black hover:text-white text-gray-600 rounded-full flex items-center justify-center transition-all duration-300">
                                         <i class="fab fa-instagram text-lg md:text-xl"></i>
                                     </a>
@@ -1353,7 +1352,7 @@
                         <p class="text-sm md:text-base text-gray-600 mb-4">También puedes contratarme directamente a
                             través de Fiverr para tus proyectos de desarrollo web y aplicaciones.</p>
                         <a href="https://www.fiverr.com/jh0ny2k2" target="_blank"
-                            class="flex items-center justify-center bg-[#1DBF73] text-white font-medium py-2.5 md:py-3 px-4 md:px-6 rounded-lg hover:bg-[#19a666] transition-colors duration-300 group">
+                            class="flex items-center justify-center bg-white text-dark border-2 border-green-500 font-medium py-2.5 md:py-3 px-4 md:px-6 rounded-lg hover:bg-green-100 transition-colors duration-300 group">
                             <i class="fab fa-fiverr mr-2 text-base md:text-lg"></i>
                             Contrátame en Fiverr
                             <svg xmlns="http://www.w3.org/2000/svg"
@@ -1369,17 +1368,7 @@
 
 
 
-            <footer class="bg-gray-100 rounded-2xl shadow-xl mx-auto max-w-[95%] my-6 md:my-10 py-8 md:py-12">
-                <!-- Copyright -->
-                <div class="px-4 md:px-12 border-gray-200">
-                    <div class="flex flex-col md:flex-row justify-between items-center">
-                        <p class="text-gray-600 text-xs md:text-sm mb-4 md:mb-0">© 2025 Jhonathan Chaves. Todos los derechos reservados.</p>
-                        <div class="flex space-x-4 md:space-x-6">
-                            <div class="text-2xl md:text-3xl font-sans font-bold text-dark">JC</div>
-                        </div>
-                    </div>
-                </div>
-            </footer>
+            
 
             <!-- JavaScript -->
             <script src="./src/js/main.js"></script>
