style: remove redundant padding and update email address
Removed unnecessary padding classes in the Skills and Contact sections to streamline the layout. Updated the email address to correct the typo in the Contact section.

--- a/index.html
+++ b/index.html
@@ -1030,7 +1030,7 @@
 
             <!-- Skills Section -->
             <section id="skills" class="py-12 md:py-20 mx-auto max-w-[95%] md:max-w-[90%] my-6 md:my-10">
-                <div class="max-w-6xl mx-auto px-4 md:px-8">
+                <div class="mx-auto ">
                     <h2 class="text-3xl md:text-4xl font-bold mb-8 md:mb-12">Mis Habilidades</h2>
 
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-6 md:gap-8">
@@ -1217,7 +1217,7 @@
 
             <!-- Contact Section -->
             <section id="contact" class="py-12 md:py-20 mx-auto max-w-[95%] md:max-w-[90%] mt-6 md:mt-10">
-                <div class="max-w-6xl mx-auto px-4 md:px-8">
+                <div class="max-w-6xl mx-auto">
                     <h2 class="text-3xl md:text-4xl font-bold mb-8 md:mb-12">Contacto</h2>
 
                     <div class="grid grid-cols-1 lg:grid-cols-2 gap-6 md:gap-12">
@@ -1236,7 +1236,7 @@
                                     <div>
                                         <p class="text-xs md:text-sm text-gray-500 mb-0.5 md:mb-1">Email</p>
                                         <a href="mailto:jhonychaves@gmail.com"
-                                            class="text-base md:text-lg font-medium hover:text-black transition-colors break-all">developerjhony8@gmail.com</a>
+                                            class="text-base md:text-lg font-medium hover:text-black transition-colors break-all">developerjhony@gmail.com</a>
                                     </div>
                                 </div>
 
