--- a/index.html
+++ b/index.html
@@ -742,6 +742,10 @@
         <div class="max-w-6xl mx-auto px-8">
             <div class="flex justify-between items-center mb-12">
                 <h2 class="text-4xl font-bold">Proyectos</h2>
+                <a href="proyectos.html" 
+                   class="text-gray-400 underline underline-offset-4 px-6 py-3 rounded-full font-semibold ">
+                    Ver todos los proyectos
+                </a>
             </div>
 
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
@@ -984,7 +988,7 @@
                 <div
                     class="group bg-white rounded-2xl overflow-hidden shadow-lg hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2 border border-gray-100">
                     <div class="relative overflow-hidden">
-                        <img src="src/tienda/Captura de pantalla 2025-04-07 200049.png" alt="Tienda Online"
+                        <img src="src/tienda/Screenshot 2025-10-02 130809.png" alt="Tienda Online"
                             class="w-full h-64 object-cover transition-transform duration-500 group-hover:scale-110">
                         <div
                             class="absolute inset-0 bg-gradient-to-t from-black/70 via-black/30 to-transparent opacity-0 group-hover:opacity-100 transition-opacity duration-300">
@@ -992,7 +996,7 @@
                         <div
                             class="absolute bottom-0 left-0 right-0 p-6 transform translate-y-full group-hover:translate-y-0 transition-transform duration-300">
                             <div class="flex space-x-3">
-                                <a href="#"
+                                <a href="https://egyptianbeatle.netlify.app/"
                                     class="px-4 py-2 bg-white text-black rounded-full text-sm font-medium hover:bg-gray-100 transition-colors flex items-center">
                                     <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 mr-1" fill="none"
                                         viewBox="0 0 24 24" stroke="currentColor">
