docs(index): update work experience timeline and education grades
Update the work experience section to reflect current position as Developer since Sep 2024 and previous internship period. Also update education grades to reflect final scores.

--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
                             <!-- Year Badge -->
                             <div
                                 class="inline-block text-xs font-semibold text-white bg-black px-3 py-1 rounded-full mb-2">
-                                Mar 2023 - Actualidad
+                                Mar 2025 - Jun 2025
                             </div>
                             <!-- Content -->
                             <div
@@ -506,10 +506,30 @@
                                 <div class="flex flex-col">
                                     <h4 class="text-xl font-bold mb-3 border-b border-gray-200 pb-2">Desarrollador</h4>
                                     <div class="space-y-4">
-                                        <div>
+                                        <!-- Posición actual - Desarrollador (desde Sep 2024) -->
+                                        <div class="mb-6">
                                             <h5 class="font-semibold text-gray-800">Kyndryl - Jornada completa</h5>
                                             <p class="text-gray-600 mt-2">
                                                 Granada, Andalucía, España - Presencial
+                                            </p>
+                                            <p class="text-gray-600 mt-3 text-sm italic">
+                                                <strong>Sep 2024 - Actualidad:</strong> Ascendido a Desarrollador
+                                            </p>
+                                            <p class="text-gray-600 mt-3">
+                                                Responsable del diseño y desarrollo de un dashboard web para el sistema Ka0s en Kyndryl. Implementación de flujos de trabajo CI/CD con GitHub Actions para automatizar la generación de la estructura HTML/JS/CSS del dashboard, la integración de datos desde archivos JSON y el despliegue continuo en el servidor web. Optimización de los procesos de actualización de contenido del dashboard mediante la automatización de la copia y estructuración de archivos de datos.
+                                            </p>
+                                            <p class="text-gray-600 mt-3">
+                                                <span class="font-semibold">Aptitudes:</span> JavaScript · yml · Tailwind CSS · GitHub
+                                            </p>
+                                        </div>
+
+                                        <!-- Posición anterior - Prácticas (Mar 2023 - Ago 2024) -->
+                                        <div class="border-t border-gray-200 pt-4">
+                                            <p class="text-gray-600 text-sm italic mb-3">
+                                                <strong>Mar 2023 - Ago 2024:</strong> Estudiante en prácticas
+                                            </p>
+                                            <p class="text-gray-600">
+                                                Como estudiante en prácticas de grado superior en Desarrollo de Aplicaciones Multiplataforma, mi compromiso fue aplicar y ampliar mis conocimientos técnicos en un entorno profesional real. Bajo la supervisión de profesionales experimentados, mi labor se centró en participar en el desarrollo de aplicaciones web, desde la concepción inicial hasta el despliegue y mantenimiento.
                                             </p>
                                         </div>
                                     </div>
@@ -707,7 +727,7 @@
                                             <div class="flex items-center mt-1">
                                                 <span class="text-sm font-medium text-gray-600">Nota final:</span>
                                                 <span
-                                                    class="ml-2 bg-black text-white text-sm font-bold px-2 py-0.5 rounded">9.2</span>
+                                                    class="ml-2 bg-black text-white text-sm font-bold px-2 py-0.5 rounded">9.8</span>
                                             </div>
                                         </div>
 
@@ -721,7 +741,7 @@
                                                 <div class="flex justify-between items-center">
                                                     <span class="text-sm font-medium text-gray-600">Nota:</span>
                                                     <span
-                                                        class="bg-black text-white text-sm font-bold px-2 py-0.5 rounded">Soon</span>
+                                                        class="bg-black text-white text-sm font-bold px-2 py-0.5 rounded">9</span>
                                                 </div>
                                             </div>
                                         </div>
